attempt to fix nav and scroll issue on iPhone

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -80,6 +80,7 @@ body {
 	border-top: 15px solid @color-swatch7;
 	padding: 20px 0;
 	position: fixed;
+    -webkit-overflow-scrolling: touch;
     left: 0;
 	right: 0;
 	top: 0;
